log/tokio-util.0.7.17.log
[tokio-util] download directory: /var/tmp/top100_artifacts/tokio-util-0.7.17
+ curl -sL https://crates.io/api/v1/crates/tokio-util/0.7.17/download
+ tar xzf -
+ cd /var/tmp/top100_artifacts/tokio-util-0.7.17
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.41
   Compiling unicode-ident v1.0.20
   Compiling libc v0.2.177
   Compiling futures-core v0.3.31
   Compiling pin-project-lite v0.2.16
   Compiling cfg-if v1.0.4
   Compiling parking_lot_core v0.9.12
   Compiling scopeguard v1.2.0
   Compiling futures-sink v0.3.31
   Compiling smallvec v1.15.1
   Compiling lock_api v0.4.14
   Compiling futures-channel v0.3.31
   Compiling slab v0.4.11
   Compiling bytes v1.10.1
   Compiling syn v2.0.108
   Compiling memchr v2.7.6
   Compiling parking_lot v0.12.5
   Compiling mio v1.1.0
   Compiling signal-hook-registry v1.4.6
   Compiling socket2 v0.6.1
   Compiling pin-utils v0.1.0
   Compiling futures-task v0.3.31
   Compiling futures-io v0.3.31
   Compiling rustix v1.1.2
   Compiling getrandom v0.3.4
   Compiling errno v0.3.14
   Compiling bitflags v2.10.0
   Compiling linux-raw-sys v0.11.0
   Compiling fastrand v2.3.0
   Compiling once_cell v1.21.3
   Compiling tokio-macros v2.6.0
   Compiling futures-macro v0.3.31
   Compiling pin-project-internal v1.1.10
   Compiling tokio v1.48.0
   Compiling futures-util v0.3.31
   Compiling async-stream-impl v0.3.6
   Compiling pin-project v1.1.10
   Compiling tempfile v3.23.0
   Compiling async-stream v0.3.6
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31
   Compiling futures-test v0.3.31
   Compiling tokio-stream v0.1.17
   Compiling tokio-util v0.7.17 (/var/tmp/top100_artifacts/tokio-util-0.7.17)
   Compiling tokio-test v0.4.4
error[E0432]: unresolved import `tokio_util::task`
  --> tests/abort_on_drop.rs:2:17
   |
2  | use tokio_util::task::AbortOnDropHandle;
   |                 ^^^^ could not find `task` in `tokio_util`
   |
note: found an item that was configured out
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:51:9
   |
51 | pub mod task;
   |         ^^^^
note: the item is gated behind the `rt` feature
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:50:7
   |
50 | #[cfg(feature = "rt")]
   |       ^^^^^^^^^^^^^^

error[E0432]: unresolved import `tokio_util::codec`
  --> tests/io_sink_writer.rs:7:17
   |
7  | use tokio_util::codec::{Encoder, FramedWrite};
   |                 ^^^^^ could not find `codec` in `tokio_util`
   |
note: found an item that was configured out
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:29:13
   |
29 |     pub mod codec;
   |             ^^^^^
note: the item is gated behind the `codec` feature
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:25:1
   |
25 | / cfg_codec! {
26 | |     #[macro_use]
27 | |     mod tracing;
...  |
30 | | }
   | |_^
   = note: this error originates in the macro `cfg_codec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `tokio_util::io`
  --> tests/io_sink_writer.rs:8:17
   |
8  | use tokio_util::io::{CopyToBytes, SinkWriter};
   |                 ^^ could not find `io` in `tokio_util`
   |
note: found an item that was configured out
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:43:13
   |
43 |     pub mod io;
   |             ^^
note: the item is gated behind the `io` feature
  --> /var/tmp/top100_artifacts/tokio-util-0.7.17/src/lib.rs:42:1
   |
42 | / cfg_io! {
43 | |     pub mod io;
44 | | }
   | |_^
   = note: this error originates in the macro `cfg_io` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `futures_util`
 --> tests/io_sink_writer.rs:4:5
  |
4 | use futures_util::SinkExt;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_util`
  |
help: there is a crate or module with a similar name
  |
4 - use futures_util::SinkExt;
4 + use futures_core::SinkExt;
  |

error[E0432]: unresolved import `tokio_util::codec`
 --> tests/length_delimited.rs:8:17
  |
8 | use tokio_util::codec::*;
  |                 ^^^^^ could not find `codec` in `tokio_util`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `tokio-util` (test "io_sink_writer") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `tokio-util` (test "abort_on_drop") due to 1 previous error
error: could not compile `tokio-util` (test "length_delimited") due to 1 previous error
+ RESULT=101
+ cd /var/tmp/top100_artifacts
+ rm -rf /var/tmp/top100_artifacts/tokio-util-0.7.17
+ exit 101
